# sierra

./: .gitattributes  .gitignore  Makefile  Makefile.in  README.rst  configure  configure.ac
.github/workflows/: build-policy.yml  lint-policy.yml
contrib/: privateuserfile.cil  sierra-9999.ebuild
doc/: MLS.rst  Makefile  Makefile.in
doc/man/: dinit_selinux.8.scd
src/: agent.cil  dev.cil  file.cil  fs.cil  invalid.cil  misc.cil  subj.cil  sys.cil  unlabeled.cil  user.cil
src/agent/: hybridagent.cil  sysagent.cil  useragent.cil
src/agent/hybridagent/: chrony.cil
src/agent/misc/: dinit.cil  dinitgentoo.cil  dinitshutdown.cil  fsck.cil  getty.cil  hostname.cil  hwclock.cil  hwdb.cil  kmod.cil  logger.cil  login.cil  mount.cil  nss.cil  openssh.cil  pam.cil  passwd.cil  portage.cil  shutdown.cil  tmpfiles.cil  udev.cil
src/agent/sysagent/: dhcpcd.cil  ldconfig.cil  metalog.cil  policycoreutils.cil  sysctl.cil  unbound.cil
src/dev/: stordev.cil  termdev.cil
src/dev/nodedev/: drinodedev.cil  eventnodedev.cil  fbnodedev.cil  hidrawnodedev.cil  inputnodedev.cil  kvmnodedev.cil  nullnodedev.cil  ptmxnodedev.cil  randomnodedev.cil  rfkillnodedev.cil  (+7 more)
src/file/: authfile.cil  bootfile.cil  bootflagfile.cil  certfile.cil  conffile.cil  contentfile.cil  datafile.cil  devfile.cil  homefile.cil  runfile.cil  secfile.cil  tmpfile.cil  userfile.cil  varfile.cil
src/misc/: av.cil  conf.cil  map.cil  mls.cil
src/user/: adminrole.cil  staffuser.cil  unprivuser.cil
templates/: seusers
templates/contexts/: default_contexts  default_type
testing/: sechecker.ini
(+136 files in other folders)
